Clean up tons of the code and fix steam loading